# ml_movies

./: .gitignore  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
data/processed/: X_test.csv  y_test.csv  y_train.csv
data/raw/: dataset-metadata.json
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: analyze_results.ipynb
src/ml_movies/: __init__.py  ml_movies.py
tests/: __init__.py  analyze_results.py  test_ml_movies.py
