[tool.poetry]
name = "ml_movies"
version = "0.1.0"
description = "Proyecto de ML-OPS para el entrenamiento de un modelo para reconocer reseñas para películas de IMDB"
authors = ["Camilo Andres Millan <camimillan2003@gmail.com>"]
license = "Not open source"
readme = "README.rst"
homepage = "https://github.com/milocam35/ml_movies"
repository = "https://github.com/milocam35/ml_movies"
documentation = "https://github.com/milocam35/ml_movies/blob/master/changelog.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "1.26.4"
tensorflow = "2.17.0"
mypy-extensions = "^0.4.3"
absl-py = "2.1.0"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiohttp-retry = "2.8.3"
aiosignal = "1.3.1"
alembic = "1.13.2"
altair = "5.4.0"
amqp = "5.2.0"
aniso8601 = "9.0.1"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.4.0"
appdirs = "1.4.4"
asttokens = "2.4.1"
astunparse = "1.6.3"
asyncssh = "2.16.0"
atpublic = "5.0"
attrs = "24.2.0"
backoff = "2.2.1"
beautifulsoup4 = "4.12.3"
billiard = "4.2.0"
bleach = "6.1.0"
blinker = "1.8.2"
blis = "0.7.11"
boto3 = "1.35.5"
botocore = "1.35.5"
cachetools = "5.5.0"
catalogue = "2.0.10"
celery = "5.4.0"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
cloudpathlib = "0.19.0"
cloudpickle = "3.0.0"
colorama = "0.4.6"
comm = "0.2.2"
commonmark = "0.9.1"
confection = "0.1.5"
configobj = "5.0.8"
contourpy = "1.2.1"
cryptography = "43.0.0"
cycler = "0.12.1"
cymem = "2.0.8"
dacite = "1.6.0"
dagshub = "0.3.34"
databricks-sdk = "0.30.0"
dataclasses-json = "0.6.7"
debugpy = "1.8.5"
decorator = "5.1.1"
defusedxml = "0.7.1"
deprecated = "1.2.14"
dictdiffer = "0.9.0"
diskcache = "5.6.3"
distro = "1.9.0"
docker = "7.1.0"
dpath = "2.2.0"
dulwich = "0.22.1"
dvc = "3.54.1"
dvc-data = "3.16.4"
dvc-http = "2.32.0"
dvc-objects = "5.1.0"
dvc-render = "1.0.2"
dvc-studio-client = "0.21.0"
dvc-task = "0.4.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
entrypoints = "0.4"
executing = "2.1.0"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
flask = "3.0.3"
flatbuffers = "24.3.25"
flatten-dict = "0.4.2"
flufl-lock = "8.1.0"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
funcy = "2.0"
fusepy = "3.0.1"
gast = "0.6.0"
gensim = "4.3.3"
gitdb = "4.0.11"
gitpython = "3.1.43"
google-auth = "2.34.0"
google-pasta = "0.2.0"
gql = "3.5.0"
grandalf = "0.8"
graphene = "3.3"
graphql-core = "3.2.3"
graphql-relay = "3.2.0"
greenlet = "3.0.3"
grpcio = "1.66.0"
gto = "1.7.1"
h11 = "0.14.0"
h5py = "3.11.0"
httpcore = "0.16.3"
httpx = "0.23.3"
hydra-core = "1.3.2"
idna = "3.8"
importlib-metadata = "7.2.1"
ipykernel = "6.29.5"
ipython = "8.27.0"
iterative-telemetry = "0.0.8"
itsdangerous = "2.2.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
jmespath = "1.0.1"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
jupyterlab-pygments = "0.3.0"
kaggle = "1.6.17"
keras = "3.5.0"
kiwisolver = "1.4.5"
kombu = "5.4.0"
langcodes = "3.4.0"
language-data = "1.2.0"
libclang = "18.1.1"
mako = "1.3.5"
marisa-trie = "1.2.0"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.22.0"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mistune = "3.0.2"
ml-dtypes = "0.4.0"
mlflow = "2.15.1"
mlflow-skinny = "2.15.1"
multidict = "6.0.5"
murmurhash = "1.0.10"
namex = "0.0.8"
narwhals = "1.5.5"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.3"
omegaconf = "2.3.0"
opentelemetry-api = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-semantic-conventions = "0.47b0"
opt-einsum = "3.3.0"
optree = "0.12.1"
orjson = "3.10.7"
packaging = "24.1"
pandas = "2.2.2"
pandocfilters = "1.5.1"
parso = "0.8.4"
pathspec = "0.12.1"
pathvalidate = "3.0.0"
pillow = "10.4.0"
platformdirs = "3.11.0"
preshed = "3.0.9"
prompt-toolkit = "3.0.47"
protobuf = "4.25.4"
psutil = "6.0.0"
pure-eval = "0.2.3"
pyarrow = "15.0.2"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pydeck = "0.9.1"
pydot = "3.0.1"
pygit2 = "1.15.1"
pygments = "2.18.0"
pygtrie = "2.5.0"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
python-slugify = "8.0.4"
pytz = "2024.1"
pywin32 = "306"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
querystring-parser = "1.2.4"
referencing = "0.35.1"
regex = "2024.7.24"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rfc3986 = "1.5.0"
rich = "13.1.0"
rpds-py = "0.20.0"
rsa = "4.9"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
s3transfer = "0.10.2"
scikit-learn = "1.5.1"
scipy = "1.13.1"
scmrepo = "3.3.7"
seaborn = "0.13.2"
semver = "3.0.2"
setuptools = "73.0.1"
shellingham = "1.5.4"
shortuuid = "1.0.13"
shtab = "1.7.1"
six = "1.16.0"
smart-open = "7.0.4"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.6"
spacy = "3.7.6"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqlalchemy = "2.0.32"
sqlparse = "0.5.1"
sqltrie = "0.11.1"
srsly = "2.4.8"
stack-data = "0.6.3"
streamlit = "1.37.1"
tabulate = "0.9.0"
tenacity = "8.2.3"
tensorboard = "2.17.1"
tensorboard-data-server = "0.7.2"
tensorflow-intel = "2.17.0"
termcolor = "2.4.0"
text-unidecode = "1.3"
textblob = "0.18.0.post0"
thinc = "8.2.5"
threadpoolctl = "3.5.0"
tinycss2 = "1.3.0"
toml = "0.10.2"
tomlkit = "0.13.2"
tornado = "6.4.1"
tqdm = "4.66.5"
traitlets = "5.14.3"
treelib = "1.6.4"
typer = "0.12.5"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
vine = "5.1.0"
voluptuous = "0.15.2"
waitress = "3.0.0"
wasabi = "1.1.3"
watchdog = "4.0.2"
wcwidth = "0.2.13"
weasel = "0.4.1"
webencodings = "0.5.1"
werkzeug = "3.0.4"
wheel = "0.44.0"
wrapt = "1.16.0"
yarl = "1.9.4"
zc-lockfile = "3.0.post1"
zipp = "3.20.0"
nltk = "^3.9.1"



[tool.poetry.dev-dependencies]
coverage = "^5.0"
mypy = "^0.910"
pytest = "^6.2"
ruff = "^0.0.241"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
